feat: problem5(진행), withdrawCurrencyFromATM() -> 지폐 액수를 받아 인출자가 받을 화폐 갯수를 반환하는 메소드 선언